--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Progetto settimanale Clone Netflix</title>
 </head>
+
 <body>
+    <!--Navbar-->
+    <header>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.htm"><img src="assets/img/netflix_logo.png" alt="logo"
+                        class="navbar-logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link" aria-current="page" href="index.htm">Home</a>
+                        <a class="nav-link" href="#">Tv Shows</a>
+                        <a class="nav-link" href="#">Movies</a>
+                        <a class="nav-link" href="#">Recently Added</a>
+                        <a class="nav-link" href="#">My List</a>
+                    </div>
+                    <div class="search-icon ms-auto d-flex align-items-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-search"
+                            viewBox="0 0 16 16">
+                            <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                        </svg>
+                        <a class="nav-link text-light p-4" href="#">KIDS</a>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white"
+                            class="bi bi-bell-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2m.995-14.901a1 1 0 1 0-1.99 0A5 5 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901" />
+                        </svg>
+                        <a class="navbar-avatar" href="#"><img src="assets/img/avatar.png" alt="avatar"
+                                class="navbar-avatar"></a>
+                                <!--menù dropdown-->
+                        <li class="nav-item dropdown d-flex align-items-center ms-1">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                            </a>
+                            <ul class="dropdown-menu dropdown-menu-end mt-3">
+                                <li><a class="dropdown-item d-flex align-items-center" href="#"><img src="assets/img/avatar.png" alt="avatar" class="navbar-avatar"><span class="testoPiccolo">Epicoder #1</span></a></li>
+                                <li><a class="dropdown-item" href="#">Menage Profiles</a></li>
+                                <li><a class="dropdown-item" href="profile.html">Account</a></li>
+                                <li><a class="dropdown-item" href="#">Help Center</a></li>
+                                <br>
+                                <li><a class="dropdown-item" href="#">Signout Netflix</a></li>
+                            </ul>
+                        </li>
+                    </div>
+
+                </div>
+            </div>
+        </nav>
+
+    </header>
 
 
 
@@ -21,10 +76,9 @@
 
 
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>    
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
