--- a/index.htm
+++ b/index.htm
@@ -44,13 +44,15 @@
                         </svg>
                         <a class="navbar-avatar" href="#"><img src="assets/img/avatar.png" alt="avatar"
                                 class="navbar-avatar"></a>
-                                <!--menù dropdown-->
+                        <!--menù dropdown-->
                         <li class="nav-item dropdown d-flex align-items-center ms-1">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end mt-3">
-                                <li><a class="dropdown-item d-flex align-items-center" href="#"><img src="assets/img/avatar.png" alt="avatar" class="navbar-avatar"><span class="testoPiccolo">Epicoder #1</span></a></li>
+                                <li><a class="dropdown-item d-flex align-items-center" href="#"><img
+                                            src="assets/img/avatar.png" alt="avatar" class="navbar-avatar"><span
+                                            class="testoPiccolo">Epicoder #1</span></a></li>
                                 <li><a class="dropdown-item" href="#">Menage Profiles</a></li>
                                 <li><a class="dropdown-item" href="profile.html">Account</a></li>
                                 <li><a class="dropdown-item" href="#">Help Center</a></li>
@@ -65,7 +67,39 @@
         </nav>
 
     </header>
-
+    <main>
+        <div class="d-flex align-items-center justify-content-between">
+            <div class="d-flex align-items-center">
+                <h1 class="me-3">TV Shows</h1>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Genres
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><button class="dropdown-item" type="button">Action</button></li>
+                        <li><button class="dropdown-item" type="button">Horror</button></li>
+                        <li><button class="dropdown-item" type="button">Comedy</button></li>
+                        <li><button class="dropdown-item" type="button">Fantasy</button></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="d-flex align-items-center">
+                <div class="me-3">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                    </svg>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-grid" viewBox="0 0 16 16">
+                        <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z"/>
+                      </svg>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
 
