--- a/profile.html
+++ b/profile.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Clone Netflix pagina profile</title>
 </head>
+
 <body>
     <!--Navbar-->
     <header>
@@ -43,13 +44,15 @@
                         </svg>
                         <a class="navbar-avatar" href="#"><img src="assets/img/avatar.png" alt="avatar"
                                 class="navbar-avatar"></a>
-                                <!--menù dropdown-->
+                        <!--menù dropdown-->
                         <li class="nav-item dropdown d-flex align-items-center ms-1">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end mt-3">
-                                <li><a class="dropdown-item d-flex align-items-center" href="#"><img src="assets/img/avatar.png" alt="avatar" class="navbar-avatar"><span class="testoPiccolo">Epicoder #1</span></a></li>
+                                <li><a class="dropdown-item d-flex align-items-center" href="#"><img
+                                            src="assets/img/avatar.png" alt="avatar" class="navbar-avatar"><span
+                                            class="testoPiccolo">Epicoder #1</span></a></li>
                                 <li><a class="dropdown-item" href="#">Menage Profiles</a></li>
                                 <li><a class="dropdown-item" href="profile.html">Account</a></li>
                                 <li><a class="dropdown-item" href="#">Help Center</a></li>
@@ -63,6 +66,73 @@
             </div>
         </nav>
 
+        <!--profilo-->
+        <main>
+            <div class="container text-light py-4 profile-container">
+                <h1 class="mb-3 text-center">Edit Profile</h1>
+                <hr class="border-secondary">
+
+                <div class="row mb-4 align-items-center">
+                    <div class="col-3 text-center">
+                        <img src="assets/img/avatar.png" alt="Profile" class="rounded img-fluid">
+                    </div>
+                    <div class="col-9">
+                        <input type="text" class="form-control bg-secondary text-light profile-input"
+                            placeholder="Epicoder #1">
+                        <label for="language" class="form-label text-light pt-3 pb-3">Language:</label>
+                        <select id="language" class="form-select bg-black text-light">
+                            <option selected>English</option>
+                            <option>Italian</option>
+                            <option>French</option>
+                            <option>Spanish</option>
+                        </select>
+                        <hr>
+                    </div>
+                </div>
+                
+
+
+
+
+                <div class="row mb-4 align-items-start">
+
+                    <div class="col-md-6 text-center">
+
+                    </div>
+                    <div class="col-md-6">
+
+                        <div class="mb-4">
+                            <label class="form-label text-light">Maturity Settings:</label>
+                            <button class="btn btn-dark w-100 text-start mb-2">ALL MATURITY SETTINGS</button>
+                            <p class="text-secondary">Show titles for all maturity settings for this profile.</p>
+                            <button class="btn btn-outline-light w-100">EDIT</button>
+                        </div>
+                        <hr>
+                        <div class="mb-4">
+                            <label class="form-label text-light">Autoplay Controls:</label>
+                            <div class="form-check mb-2">
+                                <input class="form-check-input" type="checkbox" id="autoplay1" checked>
+                                <label class="form-check-label text-light" for="autoplay1">Autoplay next episode in
+                                    a series on all devices</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="autoplay2" checked>
+                                <label class="form-check-label text-light" for="autoplay2">Autoplay next episode in
+                                    a series on all devices</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+               
+                <div class="text-center">
+                    <button class="btn bg-white btn-light px-5 py-2 me-2">SAVE</button>
+                    <button class="btn btn-outline-light px-5 py-2 me-2">CANCEL</button>
+                </div>
+
+            </div>
+            </div>
+        </main>
 
 
 
@@ -72,9 +142,13 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>    
+
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
