--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
                         <input type="text" class="form-control bg-secondary text-light profile-input"
                             placeholder="Epicoder #1">
                         <label for="language" class="form-label text-light pt-3 pb-3">Language:</label>
-                        <select id="language" class="form-select bg-black text-light">
+                        <select id="language" class="form-select bg-black text-light w-auto">
                             <option selected>English</option>
                             <option>Italian</option>
                             <option>French</option>
@@ -96,16 +96,16 @@
 
                 <div class="row mb-4 align-items-start">
 
-                    <div class="col-md-6 text-center">
+                    <div class="col-md-3 text-center">
 
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-9">
 
                         <div class="mb-4">
                             <label class="form-label text-light">Maturity Settings:</label>
                             <button class="btn btn-dark w-100 text-start mb-2">ALL MATURITY SETTINGS</button>
                             <p class="text-secondary">Show titles for all maturity settings for this profile.</p>
-                            <button class="btn btn-outline-light w-100">EDIT</button>
+                            <button class="btn btn-outline-light w-auto px-3">EDIT</button>
                         </div>
                         <hr>
                         <div class="mb-4">
@@ -126,8 +126,9 @@
                 <hr>
                
                 <div class="text-center">
-                    <button class="btn bg-white btn-light px-5 py-2 me-2">SAVE</button>
-                    <button class="btn btn-outline-light px-5 py-2 me-2">CANCEL</button>
+                    <button class="btn btn-outline-secondary text-secondary px-5 py-2 me-2">SAVE</button>
+                    <button class="btn btn-outline-secondary text-secondary px-5 py-2 me-2">CANCEL</button>
+                    <button class="btn btn-outline-secondary text-secondary px-5 py-2">DELETE PROFILE</button>
                 </div>
 
             </div>
