--- a/profile.html
+++ b/profile.html
@@ -89,7 +89,7 @@
                         <hr>
                     </div>
                 </div>
-                
+
 
 
 
@@ -124,11 +124,11 @@
                     </div>
                 </div>
                 <hr>
-               
+
                 <div class="text-center">
-                    <button class="btn btn-outline-secondary text-secondary px-5 py-2 me-2">SAVE</button>
-                    <button class="btn btn-outline-secondary text-secondary px-5 py-2 me-2">CANCEL</button>
-                    <button class="btn btn-outline-secondary text-secondary px-5 py-2">DELETE PROFILE</button>
+                    <button class="btn btn-outline-secondary px-5 py-2 me-2">SAVE</button>
+                    <button class="btn btn-outline-secondary px-5 py-2 me-2">CANCEL</button>
+                    <button class="btn btn-outline-secondary px-5 py-2">DELETE PROFILE</button>
                 </div>
 
             </div>
